byte-code-compiler/test_files/typing/bad/testfile-arith-3.psc

struct S { int_32 a; };
int_32 main() { int_32 p; struct S *q; putchar(p-q); }

